force-app/main/default/objects/Order/fields/Integration_Mode__c.field-meta.xml
<CustomField>
    <fullName>Integration_Mode__c</fullName>
    <label>Integration Mode (DEMO)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mock (Demo)</fullName>
                <default>true</default>
                <label>Mock (Demo)</label>
            </value>
            <value>
                <fullName>Live</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>