force-app/main/default/objects/Order/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Copied from the opportunity so the lead shows its orders.</inlineHelpText>
    <label>Source Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Lead_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>