force-app/main/default/objects/Order/fields/SAP_Last_Response__c.field-meta.xml
<CustomField>
    <fullName>SAP_Last_Response__c</fullName>
    <label>SAP Last Response (DEMO)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>