force-app/main/default/objects/Order/fields/SAP_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>SAP_Order_Number__c</fullName>
    <label>SAP Sales Order No. (DEMO)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>