force-app/main/default/objects/Order/fields/SAP_Sent_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>SAP_Sent_Date_Time__c</fullName>
    <label>SAP Sent Date/Time</label>
    <type>DateTime</type>
</CustomField>